[package]
name = "time-tracker"
version = "0.1.0"
edition = "2021"
description = "A tool to track time"
readme = "README.md"
homepage = "https://github.com/ThejasKiranPS/time-tracker"
repository = "https://github.com/ThejasKiranPS/time-tracker"
keywords = ["cli", "time", "tracker"]
categories = ["command-line-utilities"]

[[bin]]
name = "tt"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
dirs = "4.0.0"
rev_lines = "0.2.1"
